--- a/src/main/webapp/css/head.css
+++ b/src/main/webapp/css/head.css
@@ -22,6 +22,15 @@ html, body, h1, h2, h3, h4, h5, h6, div, dl, dt, dd, ul, ol, li, p, blockquote, 
     padding: 0;
     outline: none;
 }
+h2 {
+    font-size: 1.5em;
+}
+
+h1, h2, h3, h4, h5, h6, small {
+    font-family: "Arial","Hiragino Sans GB","Microsoft YaHei", \5fae\8f6f\96c5\9ed1, "Helvetica", "sans-serif";
+    line-height: 1.5;
+    font-weight: normal;
+}
 a {
     color: #333;
     text-decoration: none;
@@ -38,6 +47,15 @@ body li {
 }
 li {
     list-style: none;
+}
+.f-fl{
+    float: left;
+}
+.f-fr{
+    float: right;
+}
+.f-pa{
+    position: absolute;
 }
 <!-- 字体样式 -->
 .f-f0{
