--- a/src/main/webapp/css/teacher-courseware.css
+++ b/src/main/webapp/css/teacher-courseware.css
@@ -123,7 +123,7 @@
     line-height: 20px;
     margin-left: 15px;
 }
-.lesson-title-plus , .lesson-content-plus{
+.lesson-title-plus , .lesson-content-plus,.lesson-content-ok{
     color: #aaa;
     font-size: 14px;
     line-height: 20px;
