--- a/src/main/webapp/css/teacher-courseware.css
+++ b/src/main/webapp/css/teacher-courseware.css
@@ -5,7 +5,7 @@
     font-weight: normal;
 }
 .name:focus{
-    border: solid 1px #5cb85c;
+    border: solid 1px #83b600;
 }
 .j-titleName{
     font-size: 1.33em;
@@ -123,6 +123,9 @@
     line-height: 20px;
     margin-left: 15px;
 }
+.lsicon.show{
+    color: #83b600;
+}
 .lesson-title-plus , .lesson-content-plus,.lesson-content-ok{
     color: #aaa;
     font-size: 14px;
@@ -140,4 +143,62 @@
     position: absolute;
     width: 0px;
     height: 0px;
+}
+
+.u-source{
+    height: 44px;
+    width: 44px;
+    top:2px;
+    margin-right: 5px;
+    border: solid 1px;
+}
+
+.u-source-ok{
+    border: solid 1px #83b600;
+}
+
+.u-source-upload{
+    bottom:0px;
+    width: 100%;
+    height: 50%;
+    background-color:rgba(0,0,0,0.3);
+}
+.u-source-upload:hover span{
+    color:#000;
+}
+.u-source-upload span{
+    font-size: 20px;
+    margin: 0 -10px;
+    top:1px;
+    left:50%;
+    position: relative;
+    color:#fff;
+}
+
+.u-source-close{
+    width:14px;
+    height:14px;
+    right: 0;
+    top: 0;
+    background-color:rgba(0,0,0,0.3);
+}
+.u-source-close span{
+    font-size: 14px;
+    color:#fff;
+}
+.u-source-close:hover span{
+    font-size: 14px;
+    color:#000;
+}
+
+.u-source-add{
+    width: 18px;
+    height: 18px;
+    top:13px;
+    left:13px;
+}
+
+.u-source-add span{
+    font-size: 18px;
+    color: #aaa;
 }
