--- a/src/main/webapp/css/student-experiment.css
+++ b/src/main/webapp/css/student-experiment.css
@@ -5,3 +5,36 @@
     font-size: 1.17em;
     color: #999;
 }
+
+.exp-source{
+    min-height: 120px;
+    padding: 10px;
+    border-bottom: 1px dashed #E7E9EF;
+}
+.source-sign{
+    height: 100%;
+    width: 40px;
+}
+.source-box{
+    height: 122px; overflow-y:scroll;
+}
+.source-video, .source-pdf{
+    width: 120px;
+    height: 120px;
+    border: 1px solid;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+.video-play,.pdf-view{
+    width: 100%;height: 100%;
+    background-color: rgba(0,0,0,0.3);
+    display: none;
+}
+.source-video:hover .video-play{
+    display: block;
+}
+.source-pdf:hover .pdf-view{
+    display: block;
+}
+
