--- a/src/main/webapp/css/head.css
+++ b/src/main/webapp/css/head.css
@@ -127,7 +127,6 @@ li {
 .m-navTop-func > .u-navLogin-container > .u-navLogin-logo {
     left: 0px;
     top: 11px;
-    width: 190px;
     height: 28px;
     border-radius: 0px;
     position: relative;
@@ -142,7 +141,7 @@ li {
     float: left;
 }
 .m-navTop-func > .u-navLogin-container > .u-navLogin-logo > a {
-    display: inline-block;
+    display: inline;
     width: 100%;
     height: 28px;
 }
@@ -411,7 +410,4 @@ li {
     color: white;
     text-align: center;
     vertical-align: middle;
-}
-.u-icon-search2:before {
-    content: "\f002";
 }
