--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,15 +1,33 @@
 #g-container{
-    background-image:url(../img/bgi3.jpg);
-    background-repeat:no-repeat;
-    background-size:100% 100%;
-    -webkit-background-size: 100% 100%;
-    -moz-background-size:100% 100%;
+    background-color: #fff;
 }
-
+#g-nav-top{
+    height: 80px;
+    background-color: #fff;
+}
+#g-nav-top img{
+    position: absolute;
+    height: 70px;
+    left:110px;
+    top:5px;
+    display: inline-block;
+}
+#g-nav-top span{
+    position: absolute;
+    height: 50px;
+    left:235px;
+    top: 15px;
+    font-size: 30px;
+    color: #666666;
+    display: inline-block;
+    border-left:solid 2px #dedede;
+    font-family: 'microsoft yahei', Verdana, "\u5fae\u8f6f\u96c5\u9ed1", "\5b8b\4f53", Arial;
+    padding-left:20px;
+}
 #g-background{
     left:0px;
     width: 100%;
-    min-height: 630px;
+    min-height: 660px;
     border-radius: 0px;
     position: relative;
     clear: none;
@@ -18,6 +36,11 @@
     z-index:1;
     margin: 0px;
     padding: 0px;
+    background-image:url(../img/bgi3.jpg);
+    background-repeat:no-repeat;
+    background-size:100% 100%;
+    -webkit-background-size: 100% 100%;
+    -moz-background-size:100% 100%;
 }
 
 .login-box{
@@ -135,9 +158,10 @@
 
 #g-nav-bottom{
     width: 100%;
-    height: 50px;
+    height: 54px;
     background-color: rgba(255,255,255,0.5);
-    position: absolute;
+    position: relative;
     bottom: 0px;
     float: left;
+    font-family: 'microsoft yahei', Verdana, '\u5fae\u8f6f\u96c5\u9ed1', '\5b8b\4f53', Arial;
 }
