完成实验管理页面部分功能

--- a/src/main/webapp/css/teacher-experiment.css
+++ b/src/main/webapp/css/teacher-experiment.css
@@ -24,7 +24,7 @@
     cursor: pointer;
 }
 
-.source-video-add{
+.source-video-add,.source-pdf-add{
     width: 100%;height: 100%;
     color: #aaa;
 }
