完成课件实验缩略图

--- a/src/main/webapp/css/teacher-courseware.css
+++ b/src/main/webapp/css/teacher-courseware.css
@@ -151,6 +151,10 @@
     top:2px;
     margin-right: 5px;
     border: solid 1px;
+    background-repeat:no-repeat;
+    background-size:100% 100%;
+    -webkit-background-size: 100% 100%;
+    -moz-background-size:100% 100%;
 }
 
 .u-source-ok{
