--- a/src/main/webapp/css/student-experiment.css
+++ b/src/main/webapp/css/student-experiment.css
@@ -25,6 +25,10 @@
     margin-left: 10px;
     margin-bottom: 10px;
     cursor: pointer;
+    background-repeat:no-repeat;
+    background-size:100% 100%;
+    -webkit-background-size: 100% 100%;
+    -moz-background-size:100% 100%;
 }
 .video-play,.pdf-view{
     width: 100%;height: 100%;
